--- a/iosApp/Podfile
+++ b/iosApp/Podfile
@@ -3,5 +3,5 @@ target 'iosApp' do
   use_frameworks!
 
   pod 'shared', :path => '../shared'
-#  pod 'shared2', :path => '../shared2'
+  pod 'shared2', :path => '../shared2'
 end
